// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`InstructorSessionEditPageComponent > should snap when feedback question failed to load 1`] = `
<tm-instructor-session-edit-page
  FeedbackQuestionType="undefined"
  FeedbackSessionPublishStatus="undefined"
  QuestionEditFormMode="undefined"
  SessionEditFormMode="undefined"
  changeDetectorRef={[Function ViewRef]}
  courseId=""
  courseName=""
  courseService={[Function _CourseService]}
  coursesOfModifiedSession={[Function Array]}
  datetimeService={[Function _DateTimeService]}
  emailOfInstructorToPreview=""
  emailOfStudentToPreview=""
  failedToCopySessions={[Function Object]}
  feedbackQuestionModels={[Function Map]}
  feedbackQuestionsService={[Function _FeedbackQuestionsService]}
  feedbackSessionActionsService={[Function _FeedbackSessionActionsService]}
  feedbackSessionId="undefined"
  feedbackSessionModelBeforeEditing={[Function Object]}
  feedbackSessionName=""
  feedbackSessionsService={[Function _FeedbackSessionsService]}
  hasLoadingFeedbackQuestionsFailed={[Function Boolean]}
  hasLoadingFeedbackSessionFailed="false"
  instructorService={[Function _InstructorService]}
  instructorsOfCourse={[Function Array]}
  isAddingFromTemplate="false"
  isAddingQuestionPanelExpanded="false"
  isCopyingQuestion="false"
  isEditingMode="false"
  isLoadingFeedbackQuestions={[Function Boolean]}
  isLoadingFeedbackSession={[Function Boolean]}
  isResultActionLoading="false"
  modifiedSession={[Function Object]}
  modifiedTimestampsModal={[Function TemplateRef]}
  navigationService={[Function _NavigationService]}
  newQuestionEditFormModel={[Function Object]}
  ngbModal={[Function NgbModal]}
  progressBarService={[Function _ProgressBarService]}
  publishStatusName={[Function _PublishStatusNamePipe]}
  publishUnpublishRetryAttempts="undefined"
  questionEditFormModels={[Function Array]}
  route={[Function ActivatedRoute]}
  sessionEditFormModel={[Function Object]}
  simpleModalService={[Function _SimpleModalService]}
  statusMessageService={[Function _StatusMessageService]}
  studentService={[Function _StudentService]}
  studentsOfCourse={[Function Array]}
  tableComparatorService={[Function _TableComparatorService]}
  timezoneService={[Function _TimezoneService]}
  userDeadlines={[Function Object]}
>
  <tm-loading-retry>
    <div
      aria-hidden="true"
    />
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
  </tm-loading-retry><tm-loading-retry>
    <div
      aria-hidden="true"
    />
    <div
      class="text-center"
    >
      <p
        class="text-muted m-1"
      >
        Failed to load feedback questions
      </p>
      <button
        class="btn btn-primary"
      >
        <i
          aria-hidden="true"
          class="fas fa-redo"
        />
         Retry 
      </button>
    </div>
  </tm-loading-retry>
</tm-instructor-session-edit-page>
`;

exports[`InstructorSessionEditPageComponent > should snap when feedback questions are loading 1`] = `
<tm-instructor-session-edit-page
  FeedbackQuestionType="undefined"
  FeedbackSessionPublishStatus="undefined"
  QuestionEditFormMode="undefined"
  SessionEditFormMode="undefined"
  changeDetectorRef={[Function ViewRef]}
  courseId=""
  courseName=""
  courseService={[Function _CourseService]}
  coursesOfModifiedSession={[Function Array]}
  datetimeService={[Function _DateTimeService]}
  emailOfInstructorToPreview=""
  emailOfStudentToPreview=""
  failedToCopySessions={[Function Object]}
  feedbackQuestionModels={[Function Map]}
  feedbackQuestionsService={[Function _FeedbackQuestionsService]}
  feedbackSessionActionsService={[Function _FeedbackSessionActionsService]}
  feedbackSessionId="undefined"
  feedbackSessionModelBeforeEditing={[Function Object]}
  feedbackSessionName=""
  feedbackSessionsService={[Function _FeedbackSessionsService]}
  hasLoadingFeedbackQuestionsFailed="false"
  hasLoadingFeedbackSessionFailed="false"
  instructorService={[Function _InstructorService]}
  instructorsOfCourse={[Function Array]}
  isAddingFromTemplate="false"
  isAddingQuestionPanelExpanded="false"
  isCopyingQuestion="false"
  isEditingMode="false"
  isLoadingFeedbackQuestions={[Function Boolean]}
  isLoadingFeedbackSession={[Function Boolean]}
  isResultActionLoading="false"
  modifiedSession={[Function Object]}
  modifiedTimestampsModal={[Function TemplateRef]}
  navigationService={[Function _NavigationService]}
  newQuestionEditFormModel={[Function Object]}
  ngbModal={[Function NgbModal]}
  progressBarService={[Function _ProgressBarService]}
  publishStatusName={[Function _PublishStatusNamePipe]}
  publishUnpublishRetryAttempts="undefined"
  questionEditFormModels={[Function Array]}
  route={[Function ActivatedRoute]}
  sessionEditFormModel={[Function Object]}
  simpleModalService={[Function _SimpleModalService]}
  statusMessageService={[Function _StatusMessageService]}
  studentService={[Function _StudentService]}
  studentsOfCourse={[Function Array]}
  tableComparatorService={[Function _TableComparatorService]}
  timezoneService={[Function _TimezoneService]}
  userDeadlines={[Function Object]}
>
  <tm-loading-retry>
    <div
      aria-hidden="true"
    />
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
  </tm-loading-retry><tm-loading-retry>
    <div
      aria-hidden="true"
    />
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
    <div />
    <br />
    <br />
  </tm-loading-retry>
</tm-instructor-session-edit-page>
`;

exports[`InstructorSessionEditPageComponent > should snap when feedback session failed to load 1`] = `
<tm-instructor-session-edit-page
  FeedbackQuestionType="undefined"
  FeedbackSessionPublishStatus="undefined"
  QuestionEditFormMode="undefined"
  SessionEditFormMode="undefined"
  changeDetectorRef={[Function ViewRef]}
  courseId=""
  courseName=""
  courseService={[Function _CourseService]}
  coursesOfModifiedSession={[Function Array]}
  datetimeService={[Function _DateTimeService]}
  emailOfInstructorToPreview=""
  emailOfStudentToPreview=""
  failedToCopySessions={[Function Object]}
  feedbackQuestionModels={[Function Map]}
  feedbackQuestionsService={[Function _FeedbackQuestionsService]}
  feedbackSessionActionsService={[Function _FeedbackSessionActionsService]}
  feedbackSessionId="undefined"
  feedbackSessionModelBeforeEditing={[Function Object]}
  feedbackSessionName=""
  feedbackSessionsService={[Function _FeedbackSessionsService]}
  hasLoadingFeedbackQuestionsFailed="false"
  hasLoadingFeedbackSessionFailed={[Function Boolean]}
  instructorService={[Function _InstructorService]}
  instructorsOfCourse={[Function Array]}
  isAddingFromTemplate="false"
  isAddingQuestionPanelExpanded="false"
  isCopyingQuestion="false"
  isEditingMode="false"
  isLoadingFeedbackQuestions={[Function Boolean]}
  isLoadingFeedbackSession={[Function Boolean]}
  isResultActionLoading="false"
  modifiedSession={[Function Object]}
  modifiedTimestampsModal={[Function TemplateRef]}
  navigationService={[Function _NavigationService]}
  newQuestionEditFormModel={[Function Object]}
  ngbModal={[Function NgbModal]}
  progressBarService={[Function _ProgressBarService]}
  publishStatusName={[Function _PublishStatusNamePipe]}
  publishUnpublishRetryAttempts="undefined"
  questionEditFormModels={[Function Array]}
  route={[Function ActivatedRoute]}
  sessionEditFormModel={[Function Object]}
  simpleModalService={[Function _SimpleModalService]}
  statusMessageService={[Function _StatusMessageService]}
  studentService={[Function _StudentService]}
  studentsOfCourse={[Function Array]}
  tableComparatorService={[Function _TableComparatorService]}
  timezoneService={[Function _TimezoneService]}
  userDeadlines={[Function Object]}
>
  <tm-loading-retry>
    <div
      aria-hidden="true"
    />
    <div
      class="text-center"
    >
      <p
        class="text-muted m-1"
      >
        Failed to load feedback session
      </p>
      <button
        class="btn btn-primary"
      >
        <i
          aria-hidden="true"
          class="fas fa-redo"
        />
         Retry 
      </button>
    </div>
  </tm-loading-retry><tm-loading-retry>
    <div
      aria-hidden="true"
    />
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
    <div />
    <br />
    <br />
  </tm-loading-retry>
</tm-instructor-session-edit-page>
`;

exports[`InstructorSessionEditPageComponent > should snap when feedback session is loading 1`] = `
<tm-instructor-session-edit-page
  FeedbackQuestionType="undefined"
  FeedbackSessionPublishStatus="undefined"
  QuestionEditFormMode="undefined"
  SessionEditFormMode="undefined"
  changeDetectorRef={[Function ViewRef]}
  courseId=""
  courseName=""
  courseService={[Function _CourseService]}
  coursesOfModifiedSession={[Function Array]}
  datetimeService={[Function _DateTimeService]}
  emailOfInstructorToPreview=""
  emailOfStudentToPreview=""
  failedToCopySessions={[Function Object]}
  feedbackQuestionModels={[Function Map]}
  feedbackQuestionsService={[Function _FeedbackQuestionsService]}
  feedbackSessionActionsService={[Function _FeedbackSessionActionsService]}
  feedbackSessionId="undefined"
  feedbackSessionModelBeforeEditing={[Function Object]}
  feedbackSessionName=""
  feedbackSessionsService={[Function _FeedbackSessionsService]}
  hasLoadingFeedbackQuestionsFailed="false"
  hasLoadingFeedbackSessionFailed="false"
  instructorService={[Function _InstructorService]}
  instructorsOfCourse={[Function Array]}
  isAddingFromTemplate="false"
  isAddingQuestionPanelExpanded="false"
  isCopyingQuestion="false"
  isEditingMode="false"
  isLoadingFeedbackQuestions={[Function Boolean]}
  isLoadingFeedbackSession={[Function Boolean]}
  isResultActionLoading="false"
  modifiedSession={[Function Object]}
  modifiedTimestampsModal={[Function TemplateRef]}
  navigationService={[Function _NavigationService]}
  newQuestionEditFormModel={[Function Object]}
  ngbModal={[Function NgbModal]}
  progressBarService={[Function _ProgressBarService]}
  publishStatusName={[Function _PublishStatusNamePipe]}
  publishUnpublishRetryAttempts="undefined"
  questionEditFormModels={[Function Array]}
  route={[Function ActivatedRoute]}
  sessionEditFormModel={[Function Object]}
  simpleModalService={[Function _SimpleModalService]}
  statusMessageService={[Function _StatusMessageService]}
  studentService={[Function _StudentService]}
  studentsOfCourse={[Function Array]}
  tableComparatorService={[Function _TableComparatorService]}
  timezoneService={[Function _TimezoneService]}
  userDeadlines={[Function Object]}
>
  <tm-loading-retry>
    <div
      aria-hidden="true"
    />
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
  </tm-loading-retry><tm-loading-retry>
    <div
      aria-hidden="true"
    />
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
    <div />
    <br />
    <br />
  </tm-loading-retry>
</tm-instructor-session-edit-page>
`;

exports[`InstructorSessionEditPageComponent > should snap with default fields 1`] = `
<tm-instructor-session-edit-page
  FeedbackQuestionType="undefined"
  FeedbackSessionPublishStatus="undefined"
  QuestionEditFormMode="undefined"
  SessionEditFormMode="undefined"
  changeDetectorRef={[Function ViewRef]}
  courseId=""
  courseName=""
  courseService={[Function _CourseService]}
  coursesOfModifiedSession={[Function Array]}
  datetimeService={[Function _DateTimeService]}
  emailOfInstructorToPreview=""
  emailOfStudentToPreview=""
  failedToCopySessions={[Function Object]}
  feedbackQuestionModels={[Function Map]}
  feedbackQuestionsService={[Function _FeedbackQuestionsService]}
  feedbackSessionActionsService={[Function _FeedbackSessionActionsService]}
  feedbackSessionId="undefined"
  feedbackSessionModelBeforeEditing={[Function Object]}
  feedbackSessionName=""
  feedbackSessionsService={[Function _FeedbackSessionsService]}
  hasLoadingFeedbackQuestionsFailed="false"
  hasLoadingFeedbackSessionFailed="false"
  instructorService={[Function _InstructorService]}
  instructorsOfCourse={[Function Array]}
  isAddingFromTemplate="false"
  isAddingQuestionPanelExpanded="false"
  isCopyingQuestion="false"
  isEditingMode="false"
  isLoadingFeedbackQuestions={[Function Boolean]}
  isLoadingFeedbackSession={[Function Boolean]}
  isResultActionLoading="false"
  modifiedSession={[Function Object]}
  modifiedTimestampsModal={[Function TemplateRef]}
  navigationService={[Function _NavigationService]}
  newQuestionEditFormModel={[Function Object]}
  ngbModal={[Function NgbModal]}
  progressBarService={[Function _ProgressBarService]}
  publishStatusName={[Function _PublishStatusNamePipe]}
  publishUnpublishRetryAttempts="undefined"
  questionEditFormModels={[Function Array]}
  route={[Function ActivatedRoute]}
  sessionEditFormModel={[Function Object]}
  simpleModalService={[Function _SimpleModalService]}
  statusMessageService={[Function _StatusMessageService]}
  studentService={[Function _StudentService]}
  studentsOfCourse={[Function Array]}
  tableComparatorService={[Function _TableComparatorService]}
  timezoneService={[Function _TimezoneService]}
  userDeadlines={[Function Object]}
>
  <tm-loading-retry>
    <div
      aria-hidden="true"
    />
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
  </tm-loading-retry><tm-loading-retry>
    <div
      aria-hidden="true"
    />
    <tm-loading-spinner>
      <div
        class="loading-container"
      >
        <div
          class="row spinner-border text-primary"
          role="status"
        />
        <div
          class="row text-secondary"
        >
          Loading...
        </div>
      </div>
    </tm-loading-spinner>
    <div />
    <br />
    <br />
  </tm-loading-retry>
</tm-instructor-session-edit-page>
`;
